--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jammming",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kelseymorsebrown.github.io/jammming",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,7 +19,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "npm audit --omit=dev --audit-level=none"
+    "postinstall": "npm audit --omit=dev --audit-level=none",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,7 @@
   "devDependencies": {
     "@testing-library/dom": "^10.3.1",
     "@testing-library/react": "^16.0.0",
+    "gh-pages": "^6.2.0",
     "prettier": "3.3.2",
     "react-scripts": "5.0.1"
   }
