--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build project
+        env:
+          CI: true
+          REACT_APP_CLIENT_ID: ${{ secrets.API_CLIENT_ID }}
         run: npx --no-install npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
