--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,17 @@ jobs:
         env:
           REACT_APP_CLIENT_ID: ${{ secrets.API_CLIENT_ID }}
         run: npm run test
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: npm
+      - name: Install dependencies
+        run: npm ci
+      - name: Run linter
+        run: npm run lint
