--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
     types:
       - closed
     branches:
+      - 'release/**'
       - 'main'
-      - 'gh-pages'
   workflow_dispatch:
 permissions:
   contents: read
@@ -16,43 +16,12 @@ concurrency:
   cancel-in-progress: false
 jobs:
   test:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          cache: npm
-      - name: Install dependencies
-        run: npm ci
-      - name: Run tests
-        run: npm run test
-
+    uses: ./.github/workflows/test.yml
+  lint:
+    uses: ./.github/workflows/lint.yml
   build:
-    runs-on: ubuntu-latest
     needs: test
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          cache: npm
-      - name: Install dependencies
-        run: npm ci
-      - name: Build project
-        env:
-          CI: true
-          REACT_APP_CLIENT_ID: ${{ secrets.API_CLIENT_ID }}
-        run: npx --no-install npm run build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./build
+    uses: ./.github/workflows/build.yml
   # Deployment job
   deploy:
     environment:
