--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,4 +1,4 @@
-name: Update version and create Release's PR Workflow
+name: Update version and create Release PR Workflow
 on:
   workflow_dispatch:
     inputs:
@@ -21,9 +21,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Setup Node.js
-        uses: actions/checkout@v4
+        uses: actions/setup-node@v4
         with:
           node-version: '22'
+          cache: npm
       - name: Install dependencies
         run: npm ci
       - name: Set up Git
