--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -29,19 +29,19 @@ jobs:
         run: npm ci
       - name: Set up Git
         run: |
-          git config user.name "Your GitHub User Name"
-          git config user.email "Your GitHub User Email"
+          git config user.name "kelseymorsebrown"
+          git config user.email "kelsey@jellyvision.com"
       - name: Update the version
         id: update_version
         run: |
-          echo "version=$(npm version ${{ github.event.inputs.version }} --no-git-				  	tag-version)" >> $GITHUB_OUTPUT
+          echo "version=$(npm version ${{ github.event.inputs.version }} --no-git-tag-version)" >> $GITHUB_OUTPUT
       - name: Update Changelog
         id: update_changelog
         run: |
           sed -i 's/Unreleased/${{ steps.update_version.outputs.version }}/g'   CHANGELOG.md
       - name: Create pull request
         id: create_pr
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: release/${{ steps.update_version.outputs.version }}
