--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,16 +19,25 @@ jobs:
     uses: ./.github/workflows/test.yml
   lint:
     uses: ./.github/workflows/lint.yml
-  build:
-    uses: ./.github/workflows/build.yml
-  # Deployment job
   deploy:
     environment:
       name: github-pages
       url: https://kelseymorsebrown.github.io/jammming/
     runs-on: ubuntu-latest
     needs: test
+    env:
+      CI: true
+      REACT_APP_CLIENT_ID: ${{ secrets.API_CLIENT_ID }}
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: npm
+      - name: Install dependencies
+        run: npm ci
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: npm run deploy
