--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
         run: npm ci
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: npm run deploy
+        run: npm run deploy
