--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -14,6 +14,9 @@ on:
 concurrency:
   group: 'pages'
   cancel-in-progress: false
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   version:
     runs-on: ubuntu-latest
