--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,10 @@ jobs:
         with:
           node-version: '22'
           cache: npm
-      - name: Install dependencies
-        run: npm ci
+      - name: Set up Git
+        run: |
+          git config user.name "kelseymorsebrown"
+          git config user.email "kelsey@artsortment.me"
       - name: Deploy to GitHub Pages
         id: deployment
         run: npm run deploy
