--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,6 +7,8 @@ permissions:
   contents: read
   pages: write
   id-token: write
+env:
+  GH_TOKEN: ${{ secrets.PAT_TOKEN }}
 jobs:
   test:
     uses: ./.github/workflows/test.yml
