--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Tag and Release Workflow
+name: Tag, Deploy, and Release Workflow
 on:
   pull_request:
     types:
@@ -20,12 +20,12 @@ jobs:
           cache: npm
       - name: Install dependencies
         run: npm ci
-      - name: Build and Deploy
-        run: npm run deploy
       - name: Set up Git
         run: |
           git config user.name "kelseymorsebrown"
           git config user.email "kelsey@artsortment.me"
+      - name: Build and Deploy
+        run: npm run deploy
       - name: Get tag
         id: get_tag
         run: |
