--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ concurrency:
   group: 'pages'
   cancel-in-progress: false
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 jobs:
